--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html lang="en-US">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>Gabriel Dzineku | WDD130</title>
+        <meta name="description" content="Gabriel Dzineku| wdd130| Course homepage">
+        <meta name="author" content="Gabriel Dzineku">
         <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
@@ -19,8 +21,13 @@
             <img src="images/profile.jpg" alt="My picture" width="200">
             <p>My name is Gabriel Dzineku but I prefer to be called Gabi for short. Am from Ghana and stay in the capital region at Lapaz , am 23 years old. What I mostly enjoy doing at my free time is reading story books"those with history and adventure I also enjoy watching movies and listening to music. I dont mostly go out because I dont have friends as much. I love long tennis as my sports</p>
         </main>
+        <aside>
+            <h2>Ghana</h2>
+            <img src="images/ghana.webp" alt="Black Star Square" width="200">
+            <p>Ghana is a country with high culture of leaving, from rich traditions, diverse ethnic groups, and a deep sense of community.Ghana is celebrated for its colorful festivals, such as Homowo and Panafest, which showcase traditional music, dance, and art.Ghana is a country where everyone can visit and experence nature as in animals and trees and old heritage. </p>
+        </aside>
         <footer>
-            <p>©2024 🎃 Gabriel Dzineku 🎃 Accra, Gabriel</p>
+            <p>©2024 🎃 Gabriel Dzineku 🎃 Accra, Ghana</p>
         </footer>
     </body>
 </html>
