update october first

--- a/index.html
+++ b/index.html
@@ -14,14 +14,21 @@
                 <a href="#">Home</a>
                 <a href="wwr">Rafting Website</a>
                 <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
+                <a href="https://gh.linkedin.com/">Linkedin</a>
+                <a href="https://web.facebook.com/">Facebook login</a>
             </nav>
         </header>
         <main>
             <h1>Gabriel Dzineku | WDD130</h1>
             <img src="images/profile.jpg" alt="My picture" width="200">
-            <p>My name is Gabriel Dzineku but I prefer to be called Gabi for short. Am from Ghana and stay in the capital region at Lapaz , am 23 years old. What I mostly enjoy doing at my free time is reading story books"those with history and adventure I also enjoy watching movies and listening to music. I dont mostly go out because I dont have friends as much. I love long tennis as my sports</p>
+            <p>My name is Gabriel Dzineku but I prefer to be called Gabi for short. Am from Ghana and stay in the capital region at Lapaz , am 23 years old. What I mostly enjoy doing at my free time is reading story books"those with history and adventure I also enjoy watching movies and listening to music. I have 2 brothers and 2 sister in my family. I am the last child of my parent I also have other family members that I love most my Grandfather and my Grandmother, my uncle etc. I dont mostly go out because I dont have friends as much. I love long tennis as my sports. Lorem ipsum dolor maxime aliquam! Error dolores perspiciatis iusto similique, soluta eligendi nulla voluptate earum tempore blanditiis natus! Lorem ipsum dolor, sit amet consectetur adipisicing elit. A omnis dignissimos voluptatem iusto labore est consequatur eum vitae aliquid itaque laudantium laboriosam eius fugiat optio repudiandae, quaerat officia ratione dolores?</p>
+            <ul class="box">
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/accra-ghana-temple?lang=eng" target="_blank">Accra Ghana Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple?lang=eng" target="_blank">Salt Lake Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/calgary-alberta-temple?lang=eng" target="-blank">Calgary Alberta Temple</a></li>
+            </ul>
         </main>
-        <aside>
+        <aside class="box">
             <h2>Ghana</h2>
             <img src="images/ghana.webp" alt="Black Star Square" width="200">
             <p>Ghana is a country with high culture of leaving, from rich traditions, diverse ethnic groups, and a deep sense of community.Ghana is celebrated for its colorful festivals, such as Homowo and Panafest, which showcase traditional music, dance, and art.Ghana is a country where everyone can visit and experence nature as in animals and trees and old heritage. </p>
@@ -30,4 +37,5 @@
             <p>©2024 🎃 Gabriel Dzineku 🎃 Accra, Ghana</p>
         </footer>
     </body>
+    <!--1 October 2024-->
 </html>
