--- a/wwr/about.html
+++ b/wwr/about.html
@@ -23,7 +23,7 @@
         </header>
         <main>
             <div class="hero">
-                <img src="images/rafting.webp" alt="A group of friends water rafting" width=100>
+                <img src="images/rafting.webp" alt="A group of friends water rafting" width=100%>
                 <h1>Adventures of Stream Seekers wouldwide</h1>
                 <article>
                     <img src="images/raftingclint.webp" alt="A family about to have a water rafting adventure" width=150>
