--- a/wwr/about.html
+++ b/wwr/about.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <header>
-            <img src="images/logo.webp" alt="A rafting logo" width=200>
+            <img src="images/logo.webp" alt="A rafting logo" width="200">
             <nav>
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
@@ -26,7 +26,7 @@
                 <img src="images/rafting.webp" alt="A group of friends water rafting" width=100%>
                 <h1>Adventures of Stream Seekers wouldwide</h1>
                 <article>
-                    <img src="images/raftingclint.webp" alt="A family about to have a water rafting adventure" width=150>
+                    <img src="images/raftingclint.webp" alt="A family about to have a water rafting adventure" width="150">
                     <p>Are purpose is To create an immersive and a friendly online platform that showcases the thrill of whitewater rafting whiles providing the best experience to attract customers to plan and book their adventure. To make them come with their family and all to experience whitewater rafting.</p>
                 </article>
             </div>
