--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>About | Whitewater Raftig</title>
-        <meta name="description" content="An about of Whitewater rafting page">
+        <title>About Us- Adventures of The stream Wouldwide</title>
+        <meta name="description" content="About adventures of the stream Wouldwide company overrall">
         <meta name="author" content="Gabriel Dzineku">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
