--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>About Us-Adventures of The stream Wouldwide</title>
-        <meta name="description" content="About adventures of the stream Wouldwide company overrall">
+        <meta name="description" content="A short discription of are service to customers and few pictures of cclints expecrence">
         <meta name="author" content="Gabriel Dzineku">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
