updated about us page and css

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,12 +3,9 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>About Us-Adventures of The stream Wouldwide</title>
-        <meta name="description" content="A short discription of are service to customers and few pictures of cclints expecrence">
+        <title>About Us - Adventures of Stream Seekers Worldwide | WDD 130</title>
+        <meta name="description" content="About us page for the Adventures of Stream Seekers Worldwide website. Here you cal learn about our history and about some past adventures.">
         <meta name="author" content="Gabriel Dzineku">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles/rafting.css">
     </head>
     <body>
@@ -24,10 +21,10 @@
         <main>
             <div class="hero">
                 <img src="images/rafting.webp" alt="A group of friends water rafting">
-                <h1>Adventures of Stream Seekers wouldwide</h1>
+                <h1>Adventures of Stream Seekers Worldwide</h1>
                 <article>
-                    <img src="images/raftingclint.webp" alt="A family about to have a water rafting adventure" width="150">
-                    <p>Are purpose is To create an immersive and a friendly online platform that showcases the thrill of whitewater rafting whiles providing the best experience to attract customers to plan and book their adventure. To make them come with their family and all to experience whitewater rafting.</p>
+                    <img src="images/raftingclint.webp" alt="A family about to have a water rafting adventure" width="200">
+                    <p>Are purpose is To create an immersive and a friendly online platform that showcases the thrill of whitewater rafting whiles providing the best experience to attract customers to plan and book their adventure. To make them come with their family and all to experience whitewater rafting. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat accusantium aliquam eos nulla dolor ex ipsum voluptatum omnis, laudantium dolorem?</p>
                 </article>
             </div>
             <section>
