--- a/wwr/about.html
+++ b/wwr/about.html
@@ -10,8 +10,8 @@
     </head>
     <body>
         <header>
-            <img src="images/logo.webp" alt="A rafting logo" width="200">
-            <nav>
+            <img src="images/logo.webp" alt="A rafting logo" width="150" class="logo">
+            <nav class="navigation">
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
                 <a href="trips.html">Trips</a>
@@ -27,21 +27,38 @@
                     <p>Are purpose is To create an immersive and a friendly online platform that showcases the thrill of whitewater rafting whiles providing the best experience to attract customers to plan and book their adventure. To make them come with their family and all to experience whitewater rafting. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat accusantium aliquam eos nulla dolor ex ipsum voluptatum omnis, laudantium dolorem?</p>
                 </article>
             </div>
-            <section>
+            <section class="middle">
                 <h2>History</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic pariatur id iusto recusandae labore odio autem saepe blanditiis magni dolores laudantium laboriosam earum quaerat voluptate, itaque, repudiandae provident quisquam ex. Minima tenetur ratione voluptates at magni repudiandae eaque laborum provident?</p>
+                <p>Lorem ipsum dolo consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam reiciendis minima, animi ut quibusdam quaerat amet reprehenderit earum nemo eum ratione beatae quam vitae quo ullam, vel praesentium sapiente modi incidunt officiis. Consequatur, maiores maxime, molestias eaque ut, autem veritatis ab tempora blanditiis cum modi molestiae laboriosam quae ad nesciunt! Deserunt libero similique tempora corrupti quia impedit! Modi, dolorem odio. Deserunt debitis aut ad. Aspernatur itaque natus fugiat ex aliquam deserunt aperiam provident quam, iure consequuntur quisquam harum id laudantium cum culpa, tempora ab autem consequatur quas. Eveniet, voluptate facere nulla porro dolore error quae eos minus dolores ex quibusdam. Voluptatum saepe facilis unde nesciunt nisi adipisci  id iusto rec</p>
+                <img src="images/history.webp" alt=" A group rathing throug waters" width="250" class="history">
+                <p class="p2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo explicabo eius cumque sit, fugit impedit maiores necessitatibus! Quibusdam esse natus necessitatibus dolore neque minus illum. Mollitia et magnam non rerum sed velit molestiae dignissimos nihil alias eius adipisci quaerat accusantium animi consectetur, quis illum doloremque voluptatem amet earum quas. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non laudantium minima ipsam expedita et quibusdam beatae. Sunt a tempore quos facilis quisquam voluptatem, itaque officia dolorem aperiam molestias fugiat impedit! Illum officia, corrupti fugiat laudantium exercitatio voluptatum, quod </p>
             </section>
-            <section>
-                <h2>adventure Awaits You!</h2>
-                <img src="images/adventures.webp" alt="A group on an adventure">
-                <img src="images/adventures1.webp" alt="A family on an adventure">
-                <img src="images/adventures2.webp" alt="People on an adventure">
-                <img src="images/adventure3.webp" alt="A family on adventure">
-                <img src="images/adventures4.webp" alt="A family on an adventure">
+            <section class="adventure">
+                <h2>Adventure Awaits You!</h2>
+                    <figure class="image1">
+                        <img src="images/adventures.webp" alt="A group on an adventure" width="230">
+                        <figcaption>Hill Side Adventure</figcaption>
+                    </figure>
+                    <figure class="image2">
+                        <img src="images/adventures1.webp" alt="A family on an adventure" width="230">
+                        <figcaption>Higher Rafting Adventure</figcaption>
+                    </figure>
+                    <figure class="image3">
+                        <img src="images/adventures2.webp" alt="People on an adventure" width="230">
+                        <figcaption>Organisational Adventure</figcaption>
+                    </figure>
+                    <figure class="image4">
+                        <img src="images/adventure3.webp" alt="A family on adventure" width="230">
+                        <figcaption>A Family's Adventure</figcaption>
+                    </figure>
+                    <figure class="image5">
+                        <img src="images/adventures4.webp" alt="A family on an adventure" width="230">
+                        <figcaption>Normal Adventure</figcaption>
+                    </figure>
             </section>
         </main>
-        <footer>
-            <p>©2024 Adventures of Stream Seekers wouldwide | Gabriel Dzineku</p>
+        <footer class="footer">
+            <p>©2024 Adventures of Stream Seekers worldwide | Gabriel Dzineku</p>
             <nav class="sociallinks">
                 <a href="https://facebook.com">
                     <img src="images/facebooklogo.webp" alt="facebook">
@@ -50,7 +67,7 @@
                     <img src="images/instagramlogo.webp" alt="instagram">
                 </a>
                 <a href="https://tiktok.com">
-                    <img src="images/tiktoklogo.webp" alt="tiktok">
+                    <img src="images/tiktoklogo.webp" alt="tiktok" width="70">
                 </a>
             </nav>
         </footer>
