--- a/wwr/about.html
+++ b/wwr/about.html
@@ -6,6 +6,9 @@
         <title>About Us - Adventures of Stream Seekers Worldwide | WDD 130</title>
         <meta name="description" content="About us page for the Adventures of Stream Seekers Worldwide website. Here you cal learn about our history and about some past adventures.">
         <meta name="author" content="Gabriel Dzineku">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles/rafting.css">
     </head>
     <body>
@@ -13,9 +16,9 @@
             <img src="images/logo.webp" alt="A rafting logo" width="150" class="logo">
             <nav class="navigation">
                 <a href="index.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="trips.html">Trips</a>
-                <a href="contact.html">Contact</a>
+                <a href="wwr">About</a>
+                <a href="wwr">Trips</a>
+                <a href="wwr">Contact</a>
             </nav>
         </header>
         <main>
