--- a/wwr/about.html
+++ b/wwr/about.html
@@ -23,7 +23,7 @@
         </header>
         <main>
             <div class="hero">
-                <img src="images/rafting.webp" alt="A group of friends water rafting">
+                <img src="https://byui-cse.github.io/wdd130-ww-course/resources/images/hero_transparency_1024.png" alt="A group of friends water rafting">
                 <h1>Adventures of Stream Seekers Worldwide</h1>
                 <article>
                     <img src="images/raftingclint.webp" alt="A family about to have a water rafting adventure" width="200">
