--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -36,7 +36,7 @@
                     <figcaption>Rescue Team trainer</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/water guide.webp" alt="A water guide">
+                    <img src="images/guide2.webp" alt="A water guide">
                     <figcaption>Save Guide</figcaption>
                 </figure>
             </div>
@@ -60,8 +60,10 @@
                         <label for="sugessions">Website Sugessions</label>
                         <input type="radio" id="sugessions" name="sugessions">
                     </div>
+                    <div class="form-item group2>
                         <label for="message">Leave a message</label>
                         <textarea id="message" rows="4" placeholder="comment"></textarea>
+                    </div>
                     <div class="form-item group2">
                         <label for="subscribe">Please subscribe me to the monthly newsletter</label>
                         <input type="checkbox" id="subscribe" name="subscribe">
