--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -60,7 +60,7 @@
                         <label for="sugessions">Website Sugessions</label>
                         <input type="radio" id="sugessions" name="sugessions">
                     </div>
-                    <div class="form-item group2>
+                    <div class="form-item group2">
                         <label for="message">Leave a message</label>
                         <textarea id="message" rows="4" placeholder="comment"></textarea>
                     </div>
