--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -16,9 +16,9 @@
             <img src="images/logo.webp" alt="A rafting logo" width="150" class="logo">
             <nav class="navigation">
                 <a href="index.html">Home</a>
-                <a href="wwr">About</a>
-                <a href="wwr">Trips</a>
-                <a href="wwr">Contact</a>
+                <a href="about.html">About</a>
+                <a href="trips.html">Trips</a>
+                <a href="contact.html">Contact</a>
             </nav>
         </header>
         <main>
