--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Contact - About Us | WDD130</title>
+        <title>Contact - Adventures of stream seekers worldwide| WDD130</title>
         <meta name="description" content="Contact information and questions sugessions and comment of Adventures of Stream Seekers Worldwide">
         <meta name="author" content="Gabriel Dzineku">
         <link rel="preconnect" href="https://fonts.googleapis.com">
