--- a/wwr/index.html
+++ b/wwr/index.html
@@ -71,7 +71,7 @@
                         <input type="text" id="fullname" name="fullname">
                     </div>
                     <div class="fill2">
-                        <label for="email">Enter Your Email</label>
+                        <label for="email">Email</label>
                         <input type="email" id="email" name="email">
                     </div>
                     <button type="submit">Sign up</button>
