--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -110,6 +110,7 @@
         </main>
         <footer class="footer">
             <p>©2024 Adventures of Stream Seekers worldwide | Gabriel Dzineku</p>
+            <a href="images/wireframe.webp" >Wireframe</a>
             <nav class="sociallinks">
                 <a href="https://facebook.com">
                     <img src="images/facebooklogo.webp" alt="facebook">
