--- a/wwr/index.html
+++ b/wwr/index.html
@@ -9,7 +9,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="styles/home.css">
+        <link rel="stylesheet" href="styles/rafting.css">
     </head>
     <body>
         <header>
@@ -24,15 +24,15 @@
         <main>
             <div class="hero">
                 <img src="https://byui-cse.github.io/wdd130-ww-course/resources/images/rafting37_1024.jpg" alt="A group of friends water rafting">
-                <h1>Adventures of Stream Seekers Worldwide</h1>
+                <h1 class="welcome">Adventures of Stream Seekers Worldwide</h1>
                 <h2>Come And Have Your best Moments In Life! <br> That Will Never Be Forgotten!! </h2>
-                <article>
+                <section class="home">
                     <img src="images/homeart2.webp" alt="A family about to have a water rafting adventure" width="200">
                     <p>For your best experience ever adventure.</p>
-                </article>
-                <a href="trips.html">Book Now</a>
+                </section>
+                <a href="trips.html" class="call">Book Now</a>
             </div>
-            <section class="middle">
+            <section class="raft-view">
                 <h2>Come and enjoy the best of are services</h2>
                 <p>All our full day trips include:<br>FREE NIGHTS ACCOMMODATION<br>FREE PHOTOS<br>FREE WATER SLIDE</p>
                 <figure class="pic1">
@@ -44,17 +44,17 @@
                     <figcaption>Family Float</figcaption>
                 </figure>
             </section>
-            <section class="adventure">
+            <section class="home-view">
                 <h2>Stram Seekers<br> Main Trips(Ready for Adventure)</h2>
-                <figure class="image1">
+                <figure class="view1">
                     <img src="images/summit-reserve.webp" alt="A family on an adventure">
                     <figcaption>Group Summit</figcaption>
                 </figure>
-                <figure class="image2">
+                <figure class="view2">
                     <img src="images/adventure3.webp" alt="A family on water" width="400">
                     <figcaption>Organisational Adventure</figcaption>
                 </figure>
-                <figure class="image3">
+                <figure class="view3">
                     <img src="images/river-float.webp" alt="High green hill with water decending down">
                     <figcaption>High Riverrafting</figcaption>
                 </figure>
