--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -9,7 +9,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="styles/trips.css">
+        <link rel="stylesheet" href="styles/rafting.css">
     </head>
     <body>
         <header>
@@ -24,7 +24,7 @@
         <main>
             <div class="hero">
                 <img src="https://byui-cse.github.io/wdd130-ww-course/resources/images/rafting50_1024.jpg" alt="A group of friends water rafting">
-                <h1>Whitewater Rafting Trips</h1>
+                <h1 class="triptab">Whitewater Rafting Trips</h1>
                 <a href="contact.html">Contact Us</a>
             </div>
                 <!--First Time/Beginer-->
@@ -76,7 +76,7 @@
                         </tr>
                     </tbody>
                 </table>
-                <figure class="image2">
+                <figure class="tabview">
                     <img src="images/adventure3.webp" alt="A family on water" width="400">
                     <figcaption>Family Children</figcaption>
                 </figure>
@@ -110,7 +110,7 @@
         </main>
         <footer class="footer">
             <p>©2024 Adventures of Stream Seekers worldwide | Gabriel Dzineku</p>
-            <a href="images/wireframe.webp" >Wireframe</a>
+            <a href="https://app.moqups.com/qMvprqdLjM8DwB2sYdragFWPEa4u9g9M/view/page/a53c5bbd5" target="_blank" >Wireframe</a>
             <nav class="sociallinks">
                 <a href="https://facebook.com">
                     <img src="images/facebooklogo.webp" alt="facebook">
